<resources>
    <string name="app_name">INFORMANTE</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="cargarfoto">Cargar foto</string>
    <string name="InsT">Ingresar Titulo Aquí</string>
    <string name="InsD">Ingresar Descripción Aquí</string>
    <string name="Opcional">(opcional)</string>
    <string name="InsTT">Ingresa un Titulo</string>
    <string name="InsDT">Ingresa una Descripción</string>
    <string name="denuncias">Denuncias</string>
    <string name="publicar">Publicar</string>
    <string name="misdenuncias">Mis Denuncias</string>

    <!-- Complaints_Add !-->
    <!-- String AddComplaintActivity -->
    <string name="hint_title">Título</string>
    <string name="hint_description">Descripción</string>

    <string name="Username">Usuario_Anónimo</string>
    <string name="User_LastConnection">Activo hace 3 dias...</string>
    <string name="Complaint_Description"> ESTA MIERDA ESTA HORRIBLE, SOLO SIRVEN PARA BOTAR BASURA, NO CUIDAN LAS COSAS, MIREN COMO TIENEN
    AQUI, Cerdos, eso es lo que son, YO NO porque soy perfecto, no boto basura, ustedes DAN ASCOOOOOO. </string>
    <string name="Complaint_Title">Basurero en Reparto Schick </string>
    <string name="Location_Title">Ubicación: </string>
    <string name="Complaint_footer"> Informante e Informante Logo son propiedad de Informante.SA, cualquier consulta enviar a nuestro correo:
            Informante@informacion.com
            Telefonos: 8888-1234
            Facebook: Informante_Oficial
            </string>
    <string name="Done">Denuncia subida exitosamente!</string>
    <string name="Error">Error</string>
<string name= "name_required">Requiero un nombre!</string>
    <string name= "description_required">Requiero una descripción!</string>
    <string name= "ErrorLog">Error al iniciar sesión! :(</string>
    <string name= "MinChart">Minimo 3 caracteres... </string>
    <string name= "EmailR">Datos de usuario incorrectos...</string>
    <string name= "PasswordFail">Contraseña Incorrecta :(</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_maps">Map</string>
</resources>
