<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_Denuncia"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/complaint_example1"/>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civ_Avatar"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_alignBottom="@+id/iv_Denuncia"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:src="@drawable/avatar_generico"

                />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="8dp"
                >

                <TextView
                    android:id="@+id/txv_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Username"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="18dp"
                        android:background="@drawable/border"
                        >

                        <TextView
                            android:id="@+id/txv_complaintTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/Complaint_Title"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="4dp">

                            <TextView
                                android:id="@+id/txv_complaintDescription"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/Complaint_Description"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginTop="12dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="12dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border">

                        <TextView
                            android:id="@+id/Location_Title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Location_Title"
                            android:textSize="24sp"
                            android:textStyle="bold"/>

                        <LinearLayout
                            android:layout_below="@+id/Location_Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/base">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"

                                android:src="@drawable/image_location" />

                        </LinearLayout>

                    </RelativeLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="345dp"
                    android:layout_height="60dp"
                    android:orientation = "vertical"
                    android:gravity="center"
                    android:layout_margin="15dp"
                    android:background="@color/aluminum">

                    <LinearLayout
                        android:layout_width="220dp"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/Complaint_footer"
                            android:textSize="9sp"
                            android:textColor="#FFFFFF"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>


</ScrollView>